@@ -3,8 +3,11 @@
 * segway: LSF: fix bug where wrapper script sometimes did not delete
   temporary observation files after a crash
 * segway: more informative error message when supervision labels overlap each other
+* segway-layer: add --bigBed option, which works if you have
+  bedToBigBed in your path
 * segway-layer: fix issue #19. Now doesn't override previous colors
   when mnemonics aren't supplied (thanks to Jay Hesselberth)
+* installation: always require drmaa. extras_require wasn't that useful in practice
 
 1.1.0:
 
